Notification Service Application/k8s/mailhog_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mailhog-clip
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: mailhog
  ports:
  - protocol: TCP
    port: 8025
    targetPort: 8025
    name: mailhog-ui
  - protocol: TCP
    port: 1025
    targetPort: 1025
    name: mailhog
