Notification Service Application/k8s/notifications_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: notification-service-clip
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: notificationservice
