Notification Service Application/k8s/mailhog_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailhog-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target:
spec:
  rules:
    - host: [INGRESS_HOSTNAME]
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailhog-clip
                port:
                  number: 8025
